@@ -35,6 +35,8 @@ interpreter. </li>
  <li> A new <tt>-X</tt> option has been added to <a href="s6-svscan.html>s6-svscan</a>
 to better support <a href="//skarnet.org/software/s6-linux-init/">s6-linux-init</a>
 installations. </li>
+ <li> <a href="s6-svscan.html>s6-svscan</a> now handles SIGPWR and SIGWINCH, when
+diverted, on systems that define those signals. </li>
 </ul>
 
 <h2> in 2.9.0.1 </h2>
